--- a/hard.html
+++ b/hard.html
@@ -60,6 +60,116 @@
       <p class="card-text">WHITE TO MOVE</p>
     </div>
   </div>
+ <div class="card-deck">
+  <div class="card">
+    <img src="static/s-3.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+<!--      <h5 class="card-title"></h5>-->
+      <p class="card-text">WHITE TO MOVE.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-4.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE.</p>
+
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-5.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+</div>
+<div class="card-deck">
+  <div class="card">
+    <img src="static/s-6.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-7.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-8.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+</div>
+<div class="card-deck">
+  <div class="card">
+    <img src="static/s-10.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+<div class="card-deck">
+  <div class="card">
+    <img src="static/s-3.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+<!--      <h5 class="card-title"></h5>-->
+      <p class="card-text">WHITE TO MOVE.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-4.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE.</p>
+
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-5.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+</div>
+<div class="card-deck">
+  <div class="card">
+    <img src="static/s-6.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-7.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE.</p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="static/s-8.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
+</div>
+<div class="card-deck">
+  <div class="card">
+    <img src="static/s-10.jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+
+      <p class="card-text">WHITE TO MOVE</p>
+    </div>
+  </div>
   <div class="card">
     <img src="static/s-11.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
